--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
       "target": "es5",
       "outDir": "lib",
-      "strictNullChecks": true,
-      "preserveConstEnums": true
+      "strictNullChecks": true
   }
 }
 
